--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | QR code component</title>
+    <title>Frontend Mentor | QR code component | Saurav Kumar Verma</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
         font-size: 14px;
         text-align: center;
-        margin-top: 2rem;
+        margin: 0 auto;
+        margin-top: 3rem;
+        max-width: 322px;
       }
       .attribution a {
+        font-size: 1.2rem;
         color: hsl(228, 45%, 44%);
       }
     </style>
